--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/styles/style.css"/>
+  <link rel="stylesheet" href="./assets/styles/index.scss"/>
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Order summary card</title>
 </head>
 <body>
-  <div class="container">
-    <div class="hero">
+  <main class="main">
+    <article class="card">
+    <div class="card__hero">
       <img src="./assets/images/illustration-hero.svg" alt="">
     </div>
-    <div class="text-content">
-      <h2 class="title">
+    <div class="card__text-content">
+      <h2 class="card__title">
         Order Summary
       </h2>
-      <p class="subtitle">
+      <p class="card__subtitle">
         You can now listen to millions of songs, audiobooks, and podcasts on any
         device anywhere you like!
       </p>
-      <div class="plan-box">
-        <div class="plan-box-left">
+      <div class="card__plan-box">
+        <div class="card__plan-box-left">
           <img src="./assets/images/icon-music.svg" alt="">
           <div>
             <h5>Annual Plan</h5>
@@ -30,10 +31,11 @@
         </div>
         <a href="#">Change</a>
       </div>
-      <a href="#" class="proceed-btn">Proceed to Payment</a>
-      <a href="" class="Cancel-btn">Cancel Order</a>
+      <a href="#" class="card__proceed-btn">Proceed to Payment</a>
+      <a href="#" class="card__Cancel-btn">Cancel Order</a>
     </div>
-  </div>
+  </article>
+  </main>
 
    <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
