Se cambian algunos estilos.

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,14 @@
   <main class="main">
     <article class="card">
     <div class="card__hero">
-      <img src="./assets/images/illustration-hero.svg" alt="">
+      <img class="card__hero-img" src="./assets/images/illustration-hero.svg" alt="">
     </div>
-    <div class="card__text-content">
+    <div class="card__body">
       <h2 class="card__title">
         Order Summary
       </h2>
       <p class="card__subtitle">
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
+        You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
       </p>
       <div class="card__plan-box">
         <div class="card__plan-box-left">
