Se corrigen estilos

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <a href="#">Change</a>
       </div>
       <a href="#" class="card__proceed-btn">Proceed to Payment</a>
-      <a href="#" class="card__Cancel-btn">Cancel Order</a>
+      <a href="#" class="card__cancel-btn">Cancel Order</a>
     </div>
   </article>
   </main>
