Se ejecuta pretier para estandarizar el código fuente.

--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/styles/index.scss"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>Frontend Mentor | Order summary card</title>
-</head>
-<body>
-  <main class="main">
-    <article class="card">
-    <div class="card__hero">
-      <img class="card__hero-img" src="./assets/images/illustration-hero.svg" alt="">
-    </div>
-    <div class="card__body">
-      <h2 class="card__title">
-        Order Summary
-      </h2>
-      <p class="card__subtitle">
-        You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
-      </p>
-      <div class="card__plan-box">
-        <div class="card__plan-box-left">
-          <img src="./assets/images/icon-music.svg" alt="">
-          <div>
-            <h5>Annual Plan</h5>
-            <p>$59.99/year</p>
-          </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/styles/index.scss"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Order summary card</title>
+  </head>
+  <body>
+    <main class="main">
+      <article class="card">
+        <div class="card__hero">
+          <img
+            class="card__hero-img"
+            src="./assets/images/illustration-hero.svg"
+            alt=""
+          />
         </div>
-        <a href="#">Change</a>
-      </div>
-      <a href="#" class="card__proceed-btn">Proceed to Payment</a>
-      <a href="#" class="card__cancel-btn">Cancel Order</a>
-    </div>
-  </article>
-  </main>
+        <div class="card__body">
+          <h2 class="card__title">Order Summary</h2>
+          <p class="card__subtitle">
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+          <div class="card__plan-box">
+            <div class="card__plan-box-left">
+              <img
+                src="./assets/images/icon-music.svg"
+                alt=""
+              />
+              <div>
+                <h5>Annual Plan</h5>
+                <p>$59.99/year</p>
+              </div>
+            </div>
+            <a href="#">Change</a>
+          </div>
+          <a
+            href="#"
+            class="card__proceed-btn"
+            >Proceed to Payment</a
+          >
+          <a
+            href="#"
+            class="card__cancel-btn"
+            >Cancel Order</a
+          >
+        </div>
+      </article>
+    </main>
 
-   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/claumcarh" target="_blank">Claudia Marcela Cardona Hurtado</a>.
-  </footer>
-</body>
+    <footer class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://www.frontendmentor.io/profile/claumcarh"
+        target="_blank"
+        >Claudia Marcela Cardona Hurtado</a
+      >.
+    </footer>
+  </body>
 </html>
